refactor: try with resource with a mocked local date for to work with ci